# godot-cpp

./: .gitignore  binding_generator.py  meson.build  meson_options.txt
src/core/: meson.build
